# avroom

./: .gitignore  CLAUDE.md  README.md  avroom_context.md  requirements.txt  session-changes.md
TestModules/: pyproject.toml
TestModules/avroom_object_removal/: __init__.py
TestModules/avroom_object_removal/ai_engines/depth/: __init__.py
TestModules/avroom_object_removal/ai_engines/depth/strategies/: __init__.py
TestModules/avroom_object_removal/ai_engines/inpainting/: __init__.py
TestModules/avroom_object_removal/ai_engines/reconstruction_3d/: __init__.py  reconstruction_3d_facade.py  reconstruction_glb_writer.py
TestModules/avroom_object_removal/ai_engines/reconstruction_3d/_backends/openlrm_v10/: NOTICE.txt  __init__.py
TestModules/avroom_object_removal/ai_engines/reconstruction_3d/_backends/openlrm_v10/lrm/: inferrer.py
TestModules/avroom_object_removal/ai_engines/reconstruction_3d/strategies/: __init__.py  openlrm_reconstruction_strategy.py  vfusion3d_reconstruction_strategy.py
TestModules/avroom_object_removal/ai_engines/segmentation/: __init__.py  image_segmentation_facade.py  image_segmentation_strategy.py
TestModules/avroom_object_removal/ai_engines/segmentation/strategies/: sam_segmentation_strategy.py
TestModules/avroom_object_removal/routing/: __init__.py
TestModules/avroom_object_removal/routing/strategies/: __init__.py  boundary_variance_routing_strategy.py
TestModules/avroom_object_removal/utils/: __init__.py  bgra_cutout_composer.py
TestModules/src/: GuiTestClicker.py  HybridInpainter.py  ImageDepthMapper.py  LamaInpainter.py  MaskRefiner.py  OptimizedDepthFacade.py  SamFacadeSingleton.py  SamImageAdapter.py  StableDiffusionInpainter.py  __init__.py  imageAdapterFactory.py  interfaces.py  objectRemover.py
TestModules/src/ai_engines/: __init__.py
TestModules/src/ai_engines/depth/: ImageDepthMapper.py  OptimizedDepthFacade.py  __init__.py  depth_mapping_facade.py  depth_mapping_strategy.py
TestModules/src/ai_engines/depth/strategies/: __init__.py  depth_anything_mapping_strategy.py  enhanced_edge_depth_mapping_strategy.py  near_far_blended_depth_mapping_strategy.py
TestModules/src/ai_engines/inpainting/: HybridInpainter.py  LamaInpainter.py  StableDiffusionInpainter.py  __init__.py  image_inpainting_facade.py  image_inpainting_strategy.py
TestModules/src/ai_engines/inpainting/strategies/: __init__.py  hybrid_inpainting_strategy.py  lama_inpainting_strategy.py  stable_diffusion_inpainting_strategy.py
TestModules/src/ai_engines/reconstruction_3d/: __init__.py  reconstruction_3d_facade.py  reconstruction_3d_strategy.py  reconstruction_image_input.py  reconstruction_quality.py
TestModules/src/ai_engines/reconstruction_3d/_backends/: __init__.py
TestModules/src/ai_engines/reconstruction_3d/strategies/: __init__.py  hunyuan3d2_reconstruction_strategy.py  trellis_reconstruction_strategy.py  triposr_reconstruction_strategy.py
TestModules/src/ai_engines/segmentation/: SamFacadeSingleton.py  SamImageAdapter.py  __init__.py  image_segmentation_facade.py  image_segmentation_strategy.py  sam_image_adapter.py
TestModules/src/ai_engines/segmentation/strategies/: __init__.py  sam_segmentation_strategy.py
TestModules/src/core/: __init__.py  _mask_utils.py  background_inpainter.py  interfaces.py  objectRemover.py  object_remover.py  object_segmentor.py
TestModules/src/routing/: __init__.py  boundary_variance_strategy.py  center_of_mass_routing_strategy.py  gradient_variance_routing_strategy.py  segmentation_routing_strategy.py  topographic_routing_strategy.py  variance_based_routing_strategy.py
TestModules/src/routing/strategies/: boundary_variance_routing_strategy.py  center_of_mass_routing_strategy.py
TestModules/src/utils/: DebugImageSaver.py  MaskOverlapRGBAComposer.py  MaskRefiner.py  __init__.py  debug_image_saver.py  imageAdapterFactory.py  mask_refiner.py
TestModules/tests/: depthModelTest.py  depth_model_test.py  downloadTestModelWeights.py  samMasksTest.py  sam_masks_test.py  test_pipeline_runner.py  test_trellis_reconstruction_smoke.py  test_vfusion3d_hub_load.py
TrellisModule/: .gitignore  pyproject.toml
TrellisModule/src/: __init__.py  generator.py  image_input.py  output_writer.py  quality.py
TrellisModule/tests/: test_smoke.py
docs/: README.md  architecture.md  conventions.md  data-flow.md  docs-map.md  overview.md  presentation-plan.md  repo-structure.md  tech-stack.md  (+1 more)
(+129 files in other folders)
