[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "avroom-object-removal"
version = "0.1.0"
description = "Object removal AI pipeline (depth, segmentation, inpainting, 3D reconstruction)."
requires-python = ">=3.11"
dependencies = [
    "gradio_client>=1.4",
    "huggingface_hub>=0.20",
    "imageio[ffmpeg]>=2.31",
    "kiui",
    "numpy",
    "opencv-python",
    "Pillow",
    "PyMCubes>=0.1.4",
    "rembg",
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.36",
    "trimesh>=4.0.0",
]

[tool.setuptools]
packages = [
    "avroom_object_removal",
    "avroom_object_removal.ai_engines",
    "avroom_object_removal.ai_engines.depth",
    "avroom_object_removal.ai_engines.depth.strategies",
    "avroom_object_removal.ai_engines.inpainting",
    "avroom_object_removal.ai_engines.inpainting.strategies",
    "avroom_object_removal.ai_engines.reconstruction_3d",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends.openlrm_v10",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends.openlrm_v10.lrm",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends.openlrm_v10.lrm.models",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends.openlrm_v10.lrm.models.encoders",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends.openlrm_v10.lrm.models.rendering",
    "avroom_object_removal.ai_engines.reconstruction_3d._backends.openlrm_v10.lrm.models.rendering.utils",
    "avroom_object_removal.ai_engines.reconstruction_3d.strategies",
    "avroom_object_removal.ai_engines.segmentation",
    "avroom_object_removal.ai_engines.segmentation.strategies",
    "avroom_object_removal.core",
    "avroom_object_removal.routing",
    "avroom_object_removal.routing.strategies",
    "avroom_object_removal.utils",
]

[tool.setuptools.package-dir]
avroom_object_removal = "src"
